--- a/packages/lab/package.json
+++ b/packages/lab/package.json
@@ -1,14 +1,14 @@
 {
-    "version": "0.0.4", 
+    "version": "1.0", 
     "license": "MPL 1.1/GPL 2.0/LGPL 2.1", 
-    "author": "Atul Varma (http://toolness.com/) <atul@mozilla.com>", 
-    "url": "http://hg.mozilla.org/users/avarma_mozilla.com/atul-packages/file/tip/packages/cuddlefish-lab", 
-    "description": "Play around with the Cuddlefish Minilib.", 
+    "author": "Drew Willcoxon <adw@mozilla.com>", 
+    "url": "http://github.com/0c0w3/addon-sdk/tree/jetpack-lab", 
+    "description": "Atul's Cuddlefish Lab, extended to work on any pages, integreated with the docs, and rewritten using page-mod.", 
     "dependencies": [
-        "jetpack-core"
+        "jetpack-core",
+        "addon-kit"
     ], 
-    "fullName": "Cuddlefish Lab", 
-    "main": "cuddlefish-lab", 
+    "fullName": "Jetpack Lab", 
     "id": "jid0-5GX3NCIZoyYswIwcD59LsZ9ieS4", 
-    "name": "cuddlefish-lab"
+    "name": "jetpack-lab"
 }
